--- a/README.Rmd
+++ b/README.Rmd
@@ -54,8 +54,46 @@ The data is now stored in the `test_result$local.size.data` object:
 knitr::kable(head(test_result$local.size.data))
 ```
 
+Plotting this leads to a similar plot as Figure 1(a):
+
+```{r plot_data, echo = FALSE, eval = TRUE}
+library(ggplot2)
+
+ggplot(data = test_result$local.size.data, aes(x = pi1, y = size)) +
+    geom_line(aes(colour = method), linewidth = 1) +
+    #scale_y_continuous(limits = c(-4, 4*alpha*100)) +
+    geom_hline(yintercept = 0.05*100, linetype = 2, colour = "grey30",
+               linewidth = 0.4) +
+    coord_cartesian(ylim = c(0, 1.05*0.05*100)) +
+    scale_color_brewer(palette = "Dark2") +
+    labs(
+      title = "Size of Modified Fisher Exact Test",
+      subtitle = latex2exp::TeX(paste0("\\textit{$m=", 12, ",\\,n=", 11,
+                                       ",\\,H_{0}=", 1, "$}")),
+      y = "Size (%)",
+      x = bquote(pi[.("1")])
+    ) +
+    theme_bw() +
+    theme(
+      text = element_text(size = 12),
+      plot.title = element_text(face = "bold"),
+      plot.subtitle = element_text(family = "STIX Two Text", face = "italic"),
+      axis.title.x = element_text(family = "STIX Two Text", face = "italic"),
+      legend.position = "bottom",
+      legend.title = element_blank(),
+      legend.text = element_text(size = 12)
+    )
+
+```
+
 ## The Modified Fisher Exact Test
 
 ### [Read the article here](https://www.researchgate.net/publication/351111885_Consistent_Confidence_Limits_P_Values_and_Power_of_the_Non-Conservative_Size_-a_Modified_Fisher_Exact_Test)
 
-- Brief rationale and explanation of theory
+- Add brief rationale and explanation of theory
+
+## Next steps
+
+- Implement checks and unit tests
+- Document functions in a consistent way with article / SAS macro
+- Add randomised Fisher Exact Test option
