--- a/README.Rmd
+++ b/README.Rmd
@@ -59,13 +59,13 @@ Plotting this leads to a similar plot as Figure 1(a):
 ```{r plot_data, echo = FALSE, eval = TRUE}
 library(ggplot2)
 
-ggplot(data = test_result$local.size.data, aes(x = pi1, y = size)) +
-    geom_line(aes(colour = method), linewidth = 1) +
+plot <- ggplot(data = test_result$local.size.data, aes(x = pi1, y = size)) +
+    geom_line(colour = "#75260E", linewidth = 1) +
     #scale_y_continuous(limits = c(-4, 4*alpha*100)) +
     geom_hline(yintercept = 0.05*100, linetype = 2, colour = "grey30",
                linewidth = 0.4) +
     coord_cartesian(ylim = c(0, 1.05*0.05*100)) +
-    scale_color_brewer(palette = "Dark2") +
+    #scale_color_brewer(palette = "Dark2") +
     labs(
       title = "Size of Modified Fisher Exact Test",
       subtitle = latex2exp::TeX(paste0("\\textit{$m=", 12, ",\\,n=", 11,
@@ -81,9 +81,14 @@ ggplot(data = test_result$local.size.data, aes(x = pi1, y = size)) +
       axis.title.x = element_text(family = "STIX Two Text", face = "italic"),
       legend.position = "bottom",
       legend.title = element_blank(),
-      legend.text = element_text(size = 12)
+      legend.text = element_text(size = 12),
+      plot.background = element_rect(fill = NA)
     )
 
+ggsave(plot, filename = "man/figures/README-plot_data-1.svg", width = 160,
+       height = 120,  units = "mm", bg = "transparent", dpi = "retina")
+
+knitr::include_graphics("man/figures/README-plot_data-1.svg")
 ```
 
 ## The Modified Fisher Exact Test
