--- a/README.Rmd
+++ b/README.Rmd
@@ -56,7 +56,7 @@ knitr::kable(head(test_result$local.size.data))
 
 Plotting this leads to a similar plot as Figure 1(a):
 
-```{r plot_data, echo = FALSE, eval = TRUE}
+```{r plot_data, echo = FALSE, eval = TRUE, message = FALSE, warning = FALSE}
 library(ggplot2)
 library(ggdark)
 
@@ -86,8 +86,15 @@ plot <- ggplot(data = test_result$local.size.data, aes(x = pi1, y = size)) +
       panel.background = element_rect(fill = NA)
     )
 
-light_plot <- plot + theme_bw()
-dark_plot <- plot + ggdark::dark_theme_bw()
+light_plot <- plot +
+  theme_bw()
+
+dark_plot <- plot +
+  ggdark::dark_theme_bw() +
+  theme(
+    panel.background = element_rect(fill = "#0D1116"),
+    plot.background = element_rect(fill = "#0D1116")
+  )
 
 ggsave(light_plot, filename = "man/figures/README-light_plot_data-1.svg",
        width = 160, height = 120,  units = "mm", bg = "transparent",
