--- a/README.Rmd
+++ b/README.Rmd
@@ -10,6 +10,7 @@ output:
 <!-- badges: start -->
 [![lifecycle](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 [![R-CMD-check](https://github.com/pvdmeulen/modifiedfisher/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/pvdmeulen/modifiedfisher/actions/workflows/R-CMD-check.yaml)
+[![Codecov test coverage](https://codecov.io/gh/pvdmeulen/modifiedfisher/graph/badge.svg)](https://app.codecov.io/gh/pvdmeulen/modifiedfisher)
 <!-- badges: end -->
 
 ```{r options, echo = FALSE, message=FALSE, include=FALSE}
