--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,6 @@ output:
 <!-- badges: start -->
 [![lifecycle](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 [![R-CMD-check](https://github.com/pvdmeulen/modifiedfisher/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/pvdmeulen/modifiedfisher/actions/workflows/R-CMD-check.yaml)
-[![Codecov test coverage](https://codecov.io/gh/pvdmeulen/modifiedfisher/graph/badge.svg)](https://app.codecov.io/gh/pvdmeulen/modifiedfisher)
 <!-- badges: end -->
 
 ```{r options, echo = FALSE, message=FALSE, include=FALSE}
@@ -49,10 +48,10 @@ The above example uses $m = 12$ and $n = 11$, echoing Figure 1(a) and Table 2 in
 test_result <- modified_fisher_exact_test(u = 5, m = 12, v = 7, n = 11, odds_ratio = 1, alpha = 0.05, local_size_data = TRUE)
 ```
 
-The data is now stored in the `test_result$local.size.data` object:
+The data is now stored in the `test_result$local.size.data` object, with the first five rows given by:
 
-```{r print_data, echo = TRUE, eval = TRUE}
-head(test_result$local.size.data)
+```{r print_data, echo = FALSE, eval = TRUE}
+knitr::kable(head(test_result$local.size.data))
 ```
 
 Plotting this leads to a similar plot as Figure 1(a):
